# bsd_kext_log

./: .gitignore  CMakeLists.txt  Makefile  Makefile.inc  README.md  bump_build.sh
daemon/: Makefile  kextlog_daemon.c
kext/: bsd_kext_log.c  kauth.c  kauth.h  kextlog.h  log_kctl.c  log_kctl.h  log_sysctl.c  log_sysctl.h  utils.c  utils.h
